relational: improved handling of non-binary symbols

--- a/slices/libARMANI/doc/guide.tex
+++ b/slices/libARMANI/doc/guide.tex
@@ -112,7 +112,7 @@ the default)
   \item ANN (tested with v1.1.1): probably already installed on your system
 (Debian/Ubuntu: libann-dev)
 \end{itemize}
-
+You might need to compile the libraries, and libARMANI, with the flag -fPIC.
 
 
 
@@ -154,7 +154,7 @@ The important part for your modifications is the list of manipulated
 objects at the end of the file. Please note that these object
 definitions need to stay at the end of the file.
 
-\subsection{Cubes and ball}
+\subsection{Cubes and balls}
 
 How to specify cubes (blocks) and balls is best explained by means of an
 example:
