--- a/slices/libPRADA/doc/guide.tex
+++ b/slices/libPRADA/doc/guide.tex
@@ -55,7 +55,7 @@
 
 
 
-\mytitle{libPRADA -- Version 1.1\\Learning and Planning with Probabilistic
+\mytitle{libPRADA -- Version 1.2\\Learning and Planning with Probabilistic
 Relational Rules}
 \myauthor{Tobias Lang \\\texttt{http://userpage.fu-berlin.de/tlang/prada/}}
 
@@ -1094,8 +1094,8 @@ Good luck with your research!
 
 \section{Acknowledgements}
 
-Thanks to Andreas Henne who has provided code for learning and
-reasoning with non-binary symbols.
+Thanks to Andreas Henne who has provided most of the code for learning and
+reasoning with non-binary symbols and for using typed arguments in symbols.
 
 
 
