--- a/INSTALL
+++ b/INSTALL
@@ -3,7 +3,15 @@
 #  INSTALLING YOUR MLR-SYSTEM
 #  (c) Machine Learning and Robotics Lab, FU Berlin, Germany, 2011
 #  http://www.inf.fu-berlin.de/en/groups/mlr
-#  Tobias Lang
+#  author: Tobias Lang
+#
+#
+#  What does this scirpt do?
+#
+#  (1) External Libraries
+#  (2) Create make-config
+#  (3) Install our libs
+#  (4) Tests
 #
 #
 #  Parameters:
@@ -19,7 +27,7 @@
 #    https://maserati.mi.fu-berlin.de/redmine/attachments/922/mlrLibs.tar.gz
 #
 #  Example Call:
-#    FILE_TARBALL=mlrLibs.tar.gz  ./INSTALL
+#    FILE_TARBALL=mlrLibs.tgz  ./INSTALL
 
 
 [ -z "${DIR_EXTERNAL_LIBS}" ] && DIR_EXTERNAL_LIBS=~/lib/
