--- a/share/doc/guide.tex
+++ b/share/doc/guide.tex
@@ -63,7 +63,8 @@ git clone git@maserati.mi.fu-berlin.de:mlr
 
 \item Install the \textbf{Ubuntu dependencies} by executing |install_dependencies.sh| in the main folder of the MLR project (|~/git/mlr/install_dependencies.sh|).
 
-\item Download the required \textbf{external libs} (|mlrLibs.tgz|) from Maserati |https://maserati.mi.fu-berlin.de/redmine/documents/29| into the mlr root folder.
+\item Download the required \textbf{external libs} (|mlrLibs.tgz|) from Maserati into the mlr root folder:\\
+\url{https://maserati.mi.fu-berlin.de/redmine/documents/29} or
 Redmine, Documents, mlrLibs.
 Don't extract it for now!
 
