--- a/share/doc/pages/code_improvements.dox
+++ b/share/doc/pages/code_improvements.dox
@@ -1,4 +1,4 @@
-/** @page code_imporvements Points to improve the code
+/** @page code_improvements Points to improve the code
 
 @todo is this page uptodate?
 
